@@ -429,6 +429,7 @@ Special Pages:
 * (bug 5409) Hide "show/hide patrolled edits" in Special:Recentchanges if patrolling
   is disabled
 * (bug 5447) Convert first letter of username to uppercase before searching in Special:Listusers
+* (bug 759) Wrap redirects on the watchlist editing page in a span, class "watchlistredir"
 
 Misc.:
 * PHP 4.1 compatibility fix: don't use new_link parameter to mysql_connect
